--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
 }
 .nav_content{
     width: 100%;
+    position: relative;
 }
 .nav_content h1{
     text-align: center;
@@ -27,4 +28,13 @@
     padding-top: 25%;
     opacity: .80;
   }
-
+.logout{
+    position: absolute;
+    top: 20px;
+    right: 50px;
+    display: flex;
+}
+.nameLogin{
+    margin-top: 10px;
+    margin-right: 20px;
+}
